# one-piece-downloader-cli

./: .python-version  LICENSE.rst  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py
src/: cli.py  fetch.py
src/data/: chapters.json
