[metadata]
name = one-piece-downloader-cli
version = 0.1.0
author = Rodrigo Vallejos
description = Download One Piece chapters into your local machine!
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    opchap = cli:main

[options]
include_package_data = True

[options.package_data]
* = *.json